# timeuse-synthetic-profiles

./: CITATION.cff  LICENSE  README.md  pyproject.toml
docs/: data_contracts.md
notebooks/: 03_time_use_profiles_poc.ipynb  04_time_use_harmonization.ipynb  05_1_time_use_profiles_evaluation_archetype.ipynb  05_time_use_profiles_evaluation.ipynb  06_time_use_profiles_archetype_model.ipynb  07_time_use_profiles_archetype_classifier.ipynb
src/timeuse_synthetic_profiles/: __init__.py  aggregation.py  archetypes.py  diaries.py  evaluation.py  features.py  harmonize.py  hub.py  io.py  matching.py  workflows.py
tests/: test_imports.py  test_workflows.py
