[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "timeuse-synthetic-profiles"
version = "0.1.0"
description = "Time-use harmonization, donor matching, archetype modeling, and district profile generation for synthetic populations."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Mohammad Hamsa" }
]
dependencies = [
  "numpy",
  "pandas",
  "plotly",
  "scikit-learn",
  "geopandas",
  "pyarrow",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "black",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]
